Fix #1483: BE support for bundle id sdk init parameter (#1484)
(cherry picked from commit 64cf6a4027ce234b5a8672fc9e62f5f369226409)